--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap" rel="stylesheet" />
+        <link href="%sveltekit.assets%/stylesheet.css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width" />
         %sveltekit.head%
     </head>
@@ -10,12 +14,8 @@
         <div style="display: contents">%sveltekit.body%</div>
     </body>
     <style>
-        html,
-        body {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
+        * {
+            font-family: "Atkinson Hyperlegible", sans-serif;
         }
     </style>
 </html>
